--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-minecraft_version = 1.10
-forge_version = 12.18.0.1996-1.10.0
-mappings = snapshot_20160626
+minecraft_version = 1.11
+forge_version = 13.19.1.2199
+mappings = snapshot_20161220
 mod_version = 1.0
