--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-minecraft_version = 1.10
-forge_version = 12.18.0.1996-1.10.0
-mappings = snapshot_20160626
-mod_version = 1.0
+minecraft_version=1.12.1
+forge_version=14.22.0.2444
+mappings=snapshot_20170805
+mod_version=1.0
